# Rust-Postgre-CRUD-CLI

./: .env  Cargo.toml  README.md
src/: main.rs
