[package]
name = "Rust-Postgre"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-native-tls", "macros"] }
serde = { version = "1", features = ["derive"] }
dotenvy = "0.15"
inquire = "0.6" 
